fix: chip avtar distorted

--- a/apps/client/src/components/shared/chip-avatar/ChipAvatar.module.scss
+++ b/apps/client/src/components/shared/chip-avatar/ChipAvatar.module.scss
@@ -1,7 +1,7 @@
 .chipAvatar{
     border: 1px solid #ccc;    
     background-color: #f5f5f5;
-    width: 56px;
+    width: 58px;
     text-align: left;
     border-radius: 28px;
     position: relative;
